CustomObjects/objects/invoiceit_s__Quote_Rate_Plan_Charge__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>The tier 3 of the product catalog linked to the Quote.</description>
    <fields>
        <fullName>invoiceit_s__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charge_Code__c</fullName>
        <description>This field is used for Minimum customer spent</description>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Committed_Quantity__c</fullName>
        <inlineHelpText>The Quantity your customer commits to spend on a minimum.</inlineHelpText>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cost_Price__c</fullName>
        <description>Unit Cost</description>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Cost__c</fullName>
        <description>Quantity * Unit Cost</description>
        <inlineHelpText>Quantity * Unit Cost</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to Currency object</description>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Percent__c</fullName>
        <label>Discount %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Type__c</fullName>
        <description>This determines the Type of Discount(i.e discount applied by Value or Percentage).</description>
        <inlineHelpText>This determines the Type of Discount(i.e discount applied by Value or Percentage).</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exempted_From_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete_Exempted From VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Price Editable in Quote Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Max_Customer_Spend__c</fullName>
        <inlineHelpText>This is the Maximum Amount your customer will spend for this service. This is the capped Amount.</inlineHelpText>
        <label>Max Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Min_Customer_Spend__c</fullName>
        <inlineHelpText>This is the minimum amount your Customer has committed to spend</inlineHelpText>
        <label>Min Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Percentage_of_other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Format__c</fullName>
        <description>This will specify whether Price is Default or Tiered</description>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee Pricing</fullName>
                </value>
                <value>
                    <fullName>Per Unit Pricing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tiered Pricing</fullName>
                </value>
                <value>
                    <fullName>Volume Pricing</fullName>
                </value>
                <value>
                    <fullName>Percentage Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price_Type__c</fullName>
        <description>This will specify whether price is Onetime/Recurring.</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Price__c</fullName>
        <description>Its the Price of selected Quantities</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Bundle_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle Line</label>
        <referenceTo>invoiceit_s__Product_Bundle_Line__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different VAT percentages for different categories.</inlineHelpText>
        <label>Product Charge Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>RatePlanCharge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quote_Rate_Plan__c</fullName>
        <label>Quote Rate Plan</label>
        <referenceTo>invoiceit_s__Quote_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>invoiceit_s__Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recurring_Period__c</fullName>
        <label>Obsolete_Recurring Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Row_Total__c</fullName>
        <description>Row total of this charge 
Subtotal - Discount + VAT + Tax</description>
        <formula>invoiceit_s__Price__c -  invoiceit_s__Discount_Value__c +  invoiceit_s__VAT__c +  invoiceit_s__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Row total of this charge 
Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Sequence_No__c</fullName>
        <description>This holds the Sequence in which the charges are created and appears on the pdf files</description>
        <inlineHelpText>This holds the Sequence in which the charges are created and appears on the pdf files</inlineHelpText>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax_Percentage__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>15</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Of_Measurement__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Unit_Price__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT_Percentage__c</fullName>
        <label>VAT Percentage Applied</label>
        <precision>15</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Rate Plan Charge</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>